--- a/www.nass.gov.ng/4ebf2b2011a1b5b4579e880958275ed091c385a3.yml
+++ b/www.nass.gov.ng/4ebf2b2011a1b5b4579e880958275ed091c385a3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:18:45 GMT
+    - Sun, 25 Jun 2017 13:16:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jXlWnVpstYF0NmBNOsf4-1; path=/
+    - PHPSESSID=t1IVPHRw%2C3pQBzcSaZfV%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:18:45 GMT
+recorded_at: Sun, 25 Jun 2017 13:16:30 GMT
