--- a/www.nass.gov.ng/9125ed8df0b3d343edf656f8f4dff445a8187e1b.yml
+++ b/www.nass.gov.ng/9125ed8df0b3d343edf656f8f4dff445a8187e1b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:22:46 GMT
+    - Sun, 25 Jun 2017 13:20:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NTM1UabLkPTUfHHW-gqW%2C2; path=/
+    - PHPSESSID=aM-o7%2C8-nqYzOTZFz1rB%2C3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:22:46 GMT
+recorded_at: Sun, 25 Jun 2017 13:20:38 GMT
