--- a/www.nass.gov.ng/9bf9e56df2e1ebc8f03f57d13caff2d43a5ef812.yml
+++ b/www.nass.gov.ng/9bf9e56df2e1ebc8f03f57d13caff2d43a5ef812.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:23:46 GMT
+    - Sun, 25 Jun 2017 13:21:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EJk7DhxKILxdigDje%2CDHP1; path=/
+    - PHPSESSID=WdArY7VZ7vtO-l6-vY1tK1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:23:47 GMT
+recorded_at: Sun, 25 Jun 2017 13:21:53 GMT
