--- a/www.nass.gov.ng/3510693c8ffdf7188f7d439f8308819a92663dff.yml
+++ b/www.nass.gov.ng/3510693c8ffdf7188f7d439f8308819a92663dff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:24:07 GMT
+    - Sun, 25 Jun 2017 13:22:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=x1VT5a12vJRYP04H9AHjt1; path=/
+    - PHPSESSID=m7nb%2CEwFWFtMP1vyaucJI1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:24:07 GMT
+recorded_at: Sun, 25 Jun 2017 13:22:25 GMT
