--- a/www.nass.gov.ng/3edfd5b5d6e79ec5f465da328be0dbc418f3ec36.yml
+++ b/www.nass.gov.ng/3edfd5b5d6e79ec5f465da328be0dbc418f3ec36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:27:45 GMT
+    - Sun, 25 Jun 2017 13:26:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DESbt2NvoE96ZXE8p2bvw2; path=/
+    - PHPSESSID=2mHpBjOEeVgrJenaEgtB%2C1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:27:45 GMT
+recorded_at: Sun, 25 Jun 2017 13:26:02 GMT
