--- a/www.nass.gov.ng/30f1495cb93727af910cf8d5a68b4a304c81e27b.yml
+++ b/www.nass.gov.ng/30f1495cb93727af910cf8d5a68b4a304c81e27b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:28:19 GMT
+    - Sun, 25 Jun 2017 13:26:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=O6OpMdtvAtHpxBuEBa6pU3; path=/
+    - PHPSESSID=8hCIqfWy%2CJNEYMUmurGba0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:28:19 GMT
+recorded_at: Sun, 25 Jun 2017 13:26:21 GMT
