--- a/www.nass.gov.ng/ff2db6bba73b8b3ea1e4b3c3080914e19ce00204.yml
+++ b/www.nass.gov.ng/ff2db6bba73b8b3ea1e4b3c3080914e19ce00204.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:30:01 GMT
+    - Sun, 25 Jun 2017 13:27:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=49Pa79FSM3EDNmdwROlaU0; path=/
+    - PHPSESSID=apkLZKBJS303pbFVR%2CDtz2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:30:01 GMT
+recorded_at: Sun, 25 Jun 2017 13:27:17 GMT
