--- a/www.nass.gov.ng/5a6505a156b29bc998c7a9a5661fa537c1a10bd0.yml
+++ b/www.nass.gov.ng/5a6505a156b29bc998c7a9a5661fa537c1a10bd0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:32:08 GMT
+    - Sun, 25 Jun 2017 13:29:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CNsLlaItaWAEROGvS4g4y2; path=/
+    - PHPSESSID=EHG38GGMi-PbDxYJVntUn2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:32:08 GMT
+recorded_at: Sun, 25 Jun 2017 13:29:30 GMT
