--- a/www.nass.gov.ng/d91f2bd7d3346027576897bff6b419dcd299f05f.yml
+++ b/www.nass.gov.ng/d91f2bd7d3346027576897bff6b419dcd299f05f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:33:13 GMT
+    - Sun, 25 Jun 2017 13:32:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6ONqmLb5WJ6KWp7m6AshR3; path=/
+    - PHPSESSID=wbwVhyMVsHLXvw%2CSAsqZs2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:33:13 GMT
+recorded_at: Sun, 25 Jun 2017 13:32:06 GMT
