--- a/www.nass.gov.ng/4fead3742f5171abf87c97a01d333baceb654872.yml
+++ b/www.nass.gov.ng/4fead3742f5171abf87c97a01d333baceb654872.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:33:30 GMT
+    - Sun, 25 Jun 2017 13:32:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ekYBK6PL%2ClfguHSA-S4by2; path=/
+    - PHPSESSID=4L70eGgr748whR%2CiYRS0C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:33:30 GMT
+recorded_at: Sun, 25 Jun 2017 13:32:40 GMT
