--- a/www.nass.gov.ng/9e209ae9811fb6cd3ce7d65ecc3bddc4aa65cb75.yml
+++ b/www.nass.gov.ng/9e209ae9811fb6cd3ce7d65ecc3bddc4aa65cb75.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:36:09 GMT
+    - Sun, 25 Jun 2017 13:35:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=g7lQKaW-f5q91OEFxx3o52; path=/
+    - PHPSESSID=Yiy9SZcDV7tav6EE%2CcmR51; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:36:09 GMT
+recorded_at: Sun, 25 Jun 2017 13:35:21 GMT
