--- a/www.nass.gov.ng/a5171c5522c4232a71dead4a30027e824371267c.yml
+++ b/www.nass.gov.ng/a5171c5522c4232a71dead4a30027e824371267c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:37:41 GMT
+    - Sun, 25 Jun 2017 13:36:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9HAx7umQ-BIfofk0vjf8o0; path=/
+    - PHPSESSID=4WM6pp%2Cetm1DrVrzfwMmP1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:37:41 GMT
+recorded_at: Sun, 25 Jun 2017 13:36:03 GMT
