--- a/www.nass.gov.ng/6344da3494271fe58d07342c9e232db594787baf.yml
+++ b/www.nass.gov.ng/6344da3494271fe58d07342c9e232db594787baf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:38:18 GMT
+    - Sun, 25 Jun 2017 13:37:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZNr5KOwRCgAoJ9A4cwyGR3; path=/
+    - PHPSESSID=3c-95TZFCG%2C0KKNaF7Wxi3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:38:18 GMT
+recorded_at: Sun, 25 Jun 2017 13:37:14 GMT
