--- a/www.nass.gov.ng/c5e3dd6280cba67da6678292f0081502e5c87591.yml
+++ b/www.nass.gov.ng/c5e3dd6280cba67da6678292f0081502e5c87591.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:43:54 GMT
+    - Sun, 25 Jun 2017 13:42:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rXA8JO3bZA%2CIn%2CN-Q0cH02; path=/
+    - PHPSESSID=L0JAD107%2Ct1gNpwLoEz842; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:43:54 GMT
+recorded_at: Sun, 25 Jun 2017 13:42:45 GMT
