--- a/www.nass.gov.ng/ba1541f138e4adba9a2e3b75f86cb47d6aab0ee6.yml
+++ b/www.nass.gov.ng/ba1541f138e4adba9a2e3b75f86cb47d6aab0ee6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:47:52 GMT
+    - Sun, 25 Jun 2017 13:46:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3%2Cb4kORdH6zNUzJAy-0pG2; path=/
+    - PHPSESSID=wjM9IEq6cLXqbQseHs5JJ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:47:52 GMT
+recorded_at: Sun, 25 Jun 2017 13:46:20 GMT
