--- a/www.nass.gov.ng/2204a1f8329631bb9e07a5815e78f836c77754cf.yml
+++ b/www.nass.gov.ng/2204a1f8329631bb9e07a5815e78f836c77754cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:49:42 GMT
+    - Sun, 25 Jun 2017 13:48:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EHD68aBMGiQPvZSOo3BrH3; path=/
+    - PHPSESSID=gZplx6IPSntlf4X%2C99W470; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:49:42 GMT
+recorded_at: Sun, 25 Jun 2017 13:48:20 GMT
