--- a/www.nass.gov.ng/5cdd64b08d5a7e14740c538776e58c6f2f2177e5.yml
+++ b/www.nass.gov.ng/5cdd64b08d5a7e14740c538776e58c6f2f2177e5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:50:18 GMT
+    - Sun, 25 Jun 2017 13:48:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GULiSNvD7DDHedYGqGKfM0; path=/
+    - PHPSESSID=5ZmEI%2CmomO816bH2I%2Cmxn1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:50:18 GMT
+recorded_at: Sun, 25 Jun 2017 13:48:56 GMT
