--- a/www.nass.gov.ng/7dca661655bafca1032a34026a34dfb56bd519c4.yml
+++ b/www.nass.gov.ng/7dca661655bafca1032a34026a34dfb56bd519c4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:54:12 GMT
+    - Sun, 25 Jun 2017 13:53:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Rt3XI1dSklQX0L8y8Z9ld3; path=/
+    - PHPSESSID=A4L4iECSusIsJxqsGZb%2CS2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:54:12 GMT
+recorded_at: Sun, 25 Jun 2017 13:53:30 GMT
