--- a/www.nass.gov.ng/028af9b422af9b733405780740bb40d295e9294b.yml
+++ b/www.nass.gov.ng/028af9b422af9b733405780740bb40d295e9294b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:55:02 GMT
+    - Sun, 25 Jun 2017 13:53:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=R1cguAQAV4tlWiTVv8orn3; path=/
+    - PHPSESSID=A4T%2C7yYi6sCO72rwSfSQl1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:55:02 GMT
+recorded_at: Sun, 25 Jun 2017 13:53:55 GMT
