--- a/www.nass.gov.ng/789716f7bb84c252de8b0ab1c4e946956f8b8ac9.yml
+++ b/www.nass.gov.ng/789716f7bb84c252de8b0ab1c4e946956f8b8ac9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 05:59:00 GMT
+    - Sun, 25 Jun 2017 13:58:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CX1WSUjyi558fZzRdd1ef0; path=/
+    - PHPSESSID=6xMUIGVl%2CEns2jjWZ4cDC2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 05:59:00 GMT
+recorded_at: Sun, 25 Jun 2017 13:58:10 GMT
