--- a/www.nass.gov.ng/07236db57893a9639696ab6dc7776990c54bf746.yml
+++ b/www.nass.gov.ng/07236db57893a9639696ab6dc7776990c54bf746.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:05:57 GMT
+    - Sun, 25 Jun 2017 14:05:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NBa2k1q5YPxE5%2C0AgasGs3; path=/
+    - PHPSESSID=gMgX5VRKYUcYhExhgCNbu1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:05:57 GMT
+recorded_at: Sun, 25 Jun 2017 14:05:04 GMT
