--- a/www.nass.gov.ng/9de9b50a4d49ca996200d3c6a75c2c0d96731d99.yml
+++ b/www.nass.gov.ng/9de9b50a4d49ca996200d3c6a75c2c0d96731d99.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:08:55 GMT
+    - Sun, 25 Jun 2017 14:06:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Zc-CeWkI64TuXc7cKoVdW0; path=/
+    - PHPSESSID=c-jB3o%2CGYi7WoBRTVycQc1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:08:55 GMT
+recorded_at: Sun, 25 Jun 2017 14:06:41 GMT
