--- a/www.nass.gov.ng/0e7a2e14145465f85cd9b1cf1bcffd4fe363b06f.yml
+++ b/www.nass.gov.ng/0e7a2e14145465f85cd9b1cf1bcffd4fe363b06f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:09:35 GMT
+    - Sun, 25 Jun 2017 14:07:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Gvyuv%2CcknmE7Wk3c8LOHU0; path=/
+    - PHPSESSID=1VHtPzam1S2L6m-mNqwRm0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:09:35 GMT
+recorded_at: Sun, 25 Jun 2017 14:07:06 GMT
