--- a/www.nass.gov.ng/23046b6b514fd6da83765e7baf3a96afd427b821.yml
+++ b/www.nass.gov.ng/23046b6b514fd6da83765e7baf3a96afd427b821.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:10:14 GMT
+    - Sun, 25 Jun 2017 14:08:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SE%2CAb2r2YmoIjN3t7OQWm1; path=/
+    - PHPSESSID=ywFv4BbNQ9%2CLHwysp-leF1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:10:14 GMT
+recorded_at: Sun, 25 Jun 2017 14:08:01 GMT
