--- a/www.nass.gov.ng/aa84141d30f5a6828bc5a5c4a11f70841ac0f2a4.yml
+++ b/www.nass.gov.ng/aa84141d30f5a6828bc5a5c4a11f70841ac0f2a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:14:23 GMT
+    - Sun, 25 Jun 2017 14:13:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yznZu3z02Oh2r9iNPpBJG1; path=/
+    - PHPSESSID=LugFsgE%2ClmITu0IpVtN813; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:14:23 GMT
+recorded_at: Sun, 25 Jun 2017 14:13:26 GMT
