--- a/www.nass.gov.ng/d8982cee78527514c80bc51b642093fd5c1c42f9.yml
+++ b/www.nass.gov.ng/d8982cee78527514c80bc51b642093fd5c1c42f9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:16:49 GMT
+    - Sun, 25 Jun 2017 14:16:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7V6L8JwIgh%2CJW79yLgA3g2; path=/
+    - PHPSESSID=rn1TESjPZNwnpEUMuHQwn0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:16:49 GMT
+recorded_at: Sun, 25 Jun 2017 14:16:28 GMT
