--- a/www.nass.gov.ng/d13e4fd468fc90b93827386112a06d6b10c10891.yml
+++ b/www.nass.gov.ng/d13e4fd468fc90b93827386112a06d6b10c10891.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:27:57 GMT
+    - Sun, 25 Jun 2017 14:26:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XSTLHGeXiSL0nsfWvEA961; path=/
+    - PHPSESSID=CD77kC1-jZffItW%2CWaZ4M0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:27:57 GMT
+recorded_at: Sun, 25 Jun 2017 14:26:17 GMT
