--- a/www.nass.gov.ng/a3039e7135952a1b51c43426e6c82a9064c4bed3.yml
+++ b/www.nass.gov.ng/a3039e7135952a1b51c43426e6c82a9064c4bed3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:30:49 GMT
+    - Sun, 25 Jun 2017 14:28:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8npVwqKwYianzZU%2CBUb2N0; path=/
+    - PHPSESSID=idxSV3DvZ4jJpZcOIXkPL1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:30:49 GMT
+recorded_at: Sun, 25 Jun 2017 14:28:35 GMT
