--- a/www.nass.gov.ng/c281ad9139192942b0886c51466c6460900e50c0.yml
+++ b/www.nass.gov.ng/c281ad9139192942b0886c51466c6460900e50c0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:31:13 GMT
+    - Sun, 25 Jun 2017 14:29:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5d4-EdKhHMk7EWdKkuZS%2C1; path=/
+    - PHPSESSID=fIbaD0IwX1YwuLgEan1B01; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:31:13 GMT
+recorded_at: Sun, 25 Jun 2017 14:29:32 GMT
