--- a/www.nass.gov.ng/d2c04effacc8f30354acd148d637b328fd9258cc.yml
+++ b/www.nass.gov.ng/d2c04effacc8f30354acd148d637b328fd9258cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:41:18 GMT
+    - Sun, 25 Jun 2017 14:38:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6a1HxhPR%2CCTS9mkgcBIpD2; path=/
+    - PHPSESSID=7bNV6xXDG7k2PpTmct55g1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:41:18 GMT
+recorded_at: Sun, 25 Jun 2017 14:38:59 GMT
