--- a/www.nass.gov.ng/7a2da2d9faeade71beb122830caf9f7f9fc82888.yml
+++ b/www.nass.gov.ng/7a2da2d9faeade71beb122830caf9f7f9fc82888.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:45:49 GMT
+    - Sun, 25 Jun 2017 14:42:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7PaAqd12kk6gh4dB%2Cpxli0; path=/
+    - PHPSESSID=rdpMT8DoRllEEYbNT0JQN2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:45:49 GMT
+recorded_at: Sun, 25 Jun 2017 14:42:14 GMT
