--- a/www.nass.gov.ng/2619f9d85c914747086ac915b3ed31dbebef4ca0.yml
+++ b/www.nass.gov.ng/2619f9d85c914747086ac915b3ed31dbebef4ca0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:50:42 GMT
+    - Sun, 25 Jun 2017 14:48:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IRa6ZzGZSJR-VaGRQeZM52; path=/
+    - PHPSESSID=6QV5w0J659fr%2CHvfubZm82; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:50:42 GMT
+recorded_at: Sun, 25 Jun 2017 14:48:01 GMT
