--- a/www.nass.gov.ng/cb057d7bf7c29d8f9b867c3621a465eb3d122615.yml
+++ b/www.nass.gov.ng/cb057d7bf7c29d8f9b867c3621a465eb3d122615.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:53:21 GMT
+    - Sun, 25 Jun 2017 14:50:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=AQ0y8%2CaxYS62U0LXbp-lM2; path=/
+    - PHPSESSID=6YVpXZb8o0dkgg2b14Rbt3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:53:21 GMT
+recorded_at: Sun, 25 Jun 2017 14:50:13 GMT
