--- a/www.nass.gov.ng/b59a4a3baa7024b19e27b22136ba64f6330e2812.yml
+++ b/www.nass.gov.ng/b59a4a3baa7024b19e27b22136ba64f6330e2812.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:54:39 GMT
+    - Sun, 25 Jun 2017 14:51:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=j1MSPfSLYtSGzAu7Bm%2CW-3; path=/
+    - PHPSESSID=3fCRLpP31f5sVIvAVy4Fn3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:54:39 GMT
+recorded_at: Sun, 25 Jun 2017 14:51:03 GMT
