--- a/www.nass.gov.ng/6b02c07ddc216a70c52f73dfbafbe4f429852223.yml
+++ b/www.nass.gov.ng/6b02c07ddc216a70c52f73dfbafbe4f429852223.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:55:52 GMT
+    - Sun, 25 Jun 2017 14:52:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ryDXGExQ16RBDZg7%2CeqF62; path=/
+    - PHPSESSID=paaT1DTq7L6g%2C3W1H8GrQ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:55:52 GMT
+recorded_at: Sun, 25 Jun 2017 14:52:23 GMT
