--- a/www.nass.gov.ng/ebe5471cbb72fc790bb3143e22d1db6fac04c0fd.yml
+++ b/www.nass.gov.ng/ebe5471cbb72fc790bb3143e22d1db6fac04c0fd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:56:31 GMT
+    - Sun, 25 Jun 2017 14:52:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FBN%2Cw26%2CeCnYuwFYh8uEJ1; path=/
+    - PHPSESSID=nt1ag5Gf3dVdZr6O6ebPP1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:56:31 GMT
+recorded_at: Sun, 25 Jun 2017 14:52:44 GMT
