--- a/www.nass.gov.ng/a83953caba9e02a64d6d85c06cf870281388857c.yml
+++ b/www.nass.gov.ng/a83953caba9e02a64d6d85c06cf870281388857c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:58:31 GMT
+    - Sun, 25 Jun 2017 14:54:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TpRb2lnTTAxdagjo4BImZ2; path=/
+    - PHPSESSID=F-eWB88%2C9vKYQE9pbG%2C2M1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:58:31 GMT
+recorded_at: Sun, 25 Jun 2017 14:54:34 GMT
