--- a/www.nass.gov.ng/07f97841f0cc515a7eafb4df643b1beb7bc2ca44.yml
+++ b/www.nass.gov.ng/07f97841f0cc515a7eafb4df643b1beb7bc2ca44.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 06:59:03 GMT
+    - Sun, 25 Jun 2017 14:54:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tvt451DlsZR3K9K6Yue-80; path=/
+    - PHPSESSID=OJ%2CVOD4AJNwJTacK8A1h51; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 06:59:03 GMT
+recorded_at: Sun, 25 Jun 2017 14:54:55 GMT
