--- a/www.nass.gov.ng/f5db42b87c1bc7bdb0e65276da2df67dc3c94580.yml
+++ b/www.nass.gov.ng/f5db42b87c1bc7bdb0e65276da2df67dc3c94580.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:00:35 GMT
+    - Sun, 25 Jun 2017 14:57:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iwZNiKosOdix04%2Cn3q8050; path=/
+    - PHPSESSID=kYIisMpH1%2Cjb88DyJqKOV2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:00:35 GMT
+recorded_at: Sun, 25 Jun 2017 14:57:56 GMT
