--- a/www.nass.gov.ng/90ac8575dbc443d582d2dec000b26bbf2a8aa6bb.yml
+++ b/www.nass.gov.ng/90ac8575dbc443d582d2dec000b26bbf2a8aa6bb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:03:34 GMT
+    - Sun, 25 Jun 2017 15:00:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Tg6lFhWYW2Z5yvvw3H4-I1; path=/
+    - PHPSESSID=jPsdiLBQUA%2CLglEeJftnR1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:03:34 GMT
+recorded_at: Sun, 25 Jun 2017 15:00:28 GMT
