--- a/www.nass.gov.ng/6ec4aa184de090f30a6896d6065a210e6d74a866.yml
+++ b/www.nass.gov.ng/6ec4aa184de090f30a6896d6065a210e6d74a866.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:07:04 GMT
+    - Sun, 25 Jun 2017 15:03:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Jtq8R5-Oxny49E6-YBDhk0; path=/
+    - PHPSESSID=6l7%2CcqWPdJbl5cdocVbeV2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:07:05 GMT
+recorded_at: Sun, 25 Jun 2017 15:03:58 GMT
